<resources>
    <string name="app_name">TAG</string>
    <string name="title_text">T∆G</string>
    <string name="button_find">Find</string>
    <string name="button_register">Register</string>
    <string name="button_edit">Edit</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_gpsfind">Map</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="rvItems">ItemRecyclerView</string>
    <string name="tvItem">ItemRow</string>
    <string name="registerTitle">Register</string>
    <string name="nameLabel">Name</string>
    <string name="descriptionLabel">Description</string>
    <string name="registerButton">Register</string>
    <string name="finishGPSText">Done</string>
    <string name="title_activity_settings">Settings</string>

    <!--  Register an item  -->
    <string name="item_name_hint">The name of your item</string>
    <string name="item_desc_hint">A short description of what your item looks like</string>
    <string name="item_wifi_switch">Link with Wifi</string>
    <string name="item_bt_switch">Link with Bluetooth</string>

    <!-- Preference Titles -->
    <string name="bluetooth_wifi_header">Bluetooth/Wifi</string>
    <string name="camera_header">Camera</string>

    <!-- Bluetooth/Wifi Preferences -->
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_summary_on">Enabled</string>
    <string name="bluetooth_summary_off">Disabled</string>
    <string name="wifi_title">Wifi</string>
    <string name="wifi_summary_on">Enabled</string>
    <string name="wifi_summary_off">Disabled</string>

    <!--  Camera Preferences  -->
    <string name="camera_title">Camera AR</string>
    <string name="camera_summary_on">Enabled</string>
    <string name="camera_summary_off">Disabled</string>

    <!--    &lt;!&ndash; Messages Preferences &ndash;&gt;-->
    <!--    <string name="signature_title">Your signature</string>-->
    <!--    <string name="reply_title">Default reply action</string>-->

    <!--    &lt;!&ndash; Sync Preferences &ndash;&gt;-->
    <!--    <string name="sync_title">Sync email periodically</string>-->
    <!--    <string name="attachment_title">Download incoming attachments</string>-->
    <!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails-->
    <!--    </string>-->
    <!--    <string name="attachment_summary_off">Only download attachments when manually requested</string>-->

    <string name="btwifi_title">Please enable Bluetooth and/or Wifi to locate your device \n*turn on both for best results</string>
    <string name="btwifi_settings">Bluetooth/Wifi Settings</string>
    <string name="btwifi_checked">Locate Device</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_overlay">OverlayActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_close_range">CloseRangeActivity</string>
    <string name="found_dialog_title">Confirm Retrieved Device</string>
    <string name="found_dialog_message">Please confirm that you\'ve found your device</string>
    <string name="found_ok">Confirm</string>
    <string name="found_cancel">Cancel</string>
    <!--    <string name="found_missing">Help</string>-->

    <string name="closerange_cold">Start walking around</string>
    <string name="closerange_medium">Getting closer…</string>
    <string name="closerange_hot">Very close!</string>
    <string name="title_activity_bottom_nav">bottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>