<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".BTWifiActivity">

    <TextView
        android:id="@+id/BTWifiTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btwifi_title"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:padding="25dp"
        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button_BTWifiSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/btwifi_settings"
            android:textSize="12sp"
            android:textStyle="bold"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/button_BTWifiContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/btwifi_checked"
            android:textSize="12sp"
            android:textStyle="bold"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>

</LinearLayout>